kubernetes/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: "IMAGEM1"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
