kubernetes/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app
spec:
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32001
  selector:
    app: app
  type: NodePort
